overflow bug fixed

--- a/styles.css
+++ b/styles.css
@@ -120,7 +120,6 @@ h2 {
 .intro {
   background: #ffffff;
   display: flex;
-  width: 100%;
   margin-left: auto;
   margin-right: auto;
   justify-content: space-between;
